brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/Pre_Enrolment_Request__c.object-meta.xml
<CustomObject>
    <label>Pre Enrolment Request</label>
    <nameField>
        <displayFormat>PRENR-{0000}</displayFormat>
        <label>Pre Enrolment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre Enrolment Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>