brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Candidate_Email_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Email_Snapshot__c</fullName>
    <label>Candidate Email Snapshot</label>
    <type>Email</type>
</CustomField>