brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Candidate_Name_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Name_Snapshot__c</fullName>
    <label>Candidate Name Snapshot</label>
    <length>250</length>
    <type>Text</type>
</CustomField>