brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Contact_Number_Whatsapp__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number_Whatsapp__c</fullName>
    <label>Contact Number Whatsapp</label>
    <type>Phone</type>
</CustomField>