brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Criminal_Record_Declaration__c.field-meta.xml
<CustomField>
    <fullName>Criminal_Record_Declaration__c</fullName>
    <label>Criminal Record Declaration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I do NOT have any criminal record</fullName>
            </value>
            <value>
                <fullName>I have a criminal record (details will be discussed privately)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>