brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Current_State_in_USA__c.field-meta.xml
<CustomField>
    <fullName>Current_State_in_USA__c</fullName>
    <label>Current State in USA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>