brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Expiration_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Datetime__c</fullName>
    <label>Expiration Datetime</label>
    <type>DateTime</type>
</CustomField>