brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Address__c</fullName>
    <label>Home Address</label>
    <type>Address</type>
</CustomField>