brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Pre Enrolment Requests</relationshipLabel>
    <relationshipName>Pre_Enrolment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>