brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Niche__c.field-meta.xml
<CustomField>
    <fullName>Niche__c</fullName>
    <label>Niche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Niche</valueSetName>
    </valueSet>
</CustomField>