brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Niche_Other__c.field-meta.xml
<CustomField>
    <fullName>Niche_Other__c</fullName>
    <label>Niche Other</label>
    <type>TextArea</type>
</CustomField>