brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Opened_On__c.field-meta.xml
<CustomField>
    <fullName>Opened_On__c</fullName>
    <label>Opened On</label>
    <type>DateTime</type>
</CustomField>