brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Position_Type_C2C__c.field-meta.xml
<CustomField>
    <fullName>Position_Type_C2C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Type C2C</label>
    <type>Checkbox</type>
</CustomField>