brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Position_Type_Full_Time_CTH__c.field-meta.xml
<CustomField>
    <fullName>Position_Type_Full_Time_CTH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Position Type Full Time CTH</label>
    <type>Checkbox</type>
</CustomField>