brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Preferred_Training_Schedule_EST__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Training_Schedule_EST__c</fullName>
    <label>Preferred Training Schedule EST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Training_Schedule</valueSetName>
    </valueSet>
</CustomField>