brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Public_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Public_Form_Link__c</fullName>
    <label>Public Form Link</label>
    <type>Url</type>
</CustomField>