brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Public_Token__c.field-meta.xml
<CustomField>
    <fullName>Public_Token__c</fullName>
    <label>Public Token</label>
    <type>TextArea</type>
</CustomField>