brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Relocation_Other__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Other__c</fullName>
    <label>Relocation Other</label>
    <type>TextArea</type>
</CustomField>