brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Relocation_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Readiness__c</fullName>
    <label>Relocation Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, I am willing to relocate anywhere in the USA</fullName>
            </value>
            <value>
                <fullName>Yes, but only within specific states (mention in comments)</fullName>
            </value>
            <value>
                <fullName>No, I prefer remote / local positions only</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>