brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/screen_calling__c.field-meta.xml
<CustomField>
    <fullName>screen_calling__c</fullName>
    <label>Contact Number Calling</label>
    <type>Phone</type>
</CustomField>