brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Sent_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_On__c</fullName>
    <label>Sent On</label>
    <type>DateTime</type>
</CustomField>