brain/sources/prod-metadata/objects/Pre_Enrolment_Request__c/fields/Submitted_On__c.field-meta.xml
<CustomField>
    <fullName>Submitted_On__c</fullName>
    <label>Submitted On</label>
    <type>DateTime</type>
</CustomField>